--- a/Modules/Architect/Resources/assets/sass/architect/_variables.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_variables.scss
@@ -10,7 +10,7 @@ $panel-default-border: $laravel-border-color;
 $panel-inner-border: $laravel-border-color;
 
 // Brands
-$brand-primary: #1e88e5;
+$brand-primary: #4a9fea;
 $brand-info:  #7460ee;
 $brand-success: #26c6da;
 $brand-warning: #ffb22b;
@@ -40,7 +40,7 @@ $panel-default-heading-bg: #fff;
 
 
 // Layout colors
-$cms-light-color-1: #eef5f9;  //main gray
+$cms-light-color-1: #f2f2f2;  //main gray
 $cms-light-color-2 : #fefefe; //heder gray
 $cms-light-color-3 : #eaeef0; //heder gray tables
 $cms-light-color-4 : #d5dadc; //border buttons
@@ -49,4 +49,7 @@ $cms-dark-color-1 : #37474f; //menu text dark
 $cms-dark-color-2 : #6b6e73; //menu text
 $cms-dark-color-3 : #969696; //menu text
 
-$cms-color-1 : #26c6da; //blue
+$cms-color-1 : #5b9fef; //blue
+
+$cms-dark-color-1 : #273544;
+$cms-dark-color-2 : #192532;
