--- a/Modules/Architect/Resources/assets/sass/architect/_topnav.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_topnav.scss
@@ -77,7 +77,7 @@ header {
         }
 
         .topnav-top {
-            background-color: $brand-primary;
+            background-color: $cms-dark-color-1;
             color: #fff;
             line-height:60px;
         }
@@ -136,6 +136,7 @@ header {
   position: absolute;
   top:0px;
   right:0px;
+  background-color:$cms-dark-color-2;
 
   .navbar-nav > li > .dropdown-menu {
     background-color : $brand-primary;
@@ -174,4 +175,38 @@ header {
 
   }
 
+}
+
+#logo-wrapper{
+  background-color:$cms-dark-color-2;
+  height:$header-height;
+
+  @include font(16,70,400);
+}
+
+nav.main-nav{
+  ul {
+    padding: 0;
+    margin: 0;
+
+    li{
+      display:inline-block;
+      a{
+
+        @extend .animate;
+
+        color:#fff;
+        @include font(16,70,400);
+        padding: 0 20px;
+        border-bottom: 3px solid transparent;
+
+        &:hover{
+          text-decoration: none;
+          color: $brand-primary;
+          border-bottom: 3px solid $brand-primary;
+        }
+
+      }
+    }
+  }
 }
