typologies frontend done

--- a/Modules/Architect/Resources/assets/sass/architect/_rightbar-page.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_rightbar-page.scss
@@ -54,17 +54,39 @@
     .fields-list-container{
       /*background-color: #fafafa;*/
       border:1px dashed #ccc;
-      height: 40vh;
+      padding:15px;
 
-      display: table;
       width: 100%;
       text-align: center;
+      margin-bottom:40px;
+
+      .list-container-content-wrapper{
+        display: block;
+        display: table;
+        width: 100%;
+        height: 40vh;
+      }
 
       .list-container-content{
         display: table-cell;
         vertical-align: middle;
         @include font(16,20,400);
         color:#aaa;
+        width:100%;
+        height:100%;
+      }
+
+      &.can-drop {
+        background-color:#fafafa;
+      }
+
+      &.is-active {
+        background-color:#fafafa;
+        border:1px dashed $cms-color-1;
+
+        .list-container-content{
+            color:$cms-color-1;
+        }
       }
 
     }
@@ -89,6 +111,8 @@
         display: inline-block;
         width:150px;
         position:absolute;
+        top: 0px;
+        left: 0px;
 
         @include font(14,50,500);
         padding-left:45px;
@@ -108,8 +132,12 @@
       .field-inputs {
         position:relative;
         padding-left:160px;
-        padding-right:150px;
+        padding-right:200px;
         padding-top: 2px;
+      }
+
+      .remove-field-btn{
+        color:$brand-danger;
       }
 
       .field-name {
@@ -124,7 +152,7 @@
         position: absolute;
         top:0px;
         right:0px;
-        width:100px;
+        width: 180px;
 
         a{
           @include font(12,50,400);
@@ -158,6 +186,7 @@
     border-left:1px solid #ccc;
     border-right:1px solid #ccc;
     padding : 0 10px;
+    background-color: #fafafa;
   }
 
   .form-group{
@@ -197,6 +226,7 @@
       background-color: #fafafa;
       padding-left:60px;
       @include round(6px);
+      cursor: 'move';
 
       i.fa{
         position:absolute;
