edit media modal

--- a/Modules/Architect/Resources/assets/sass/architect/_variables.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_variables.scss
@@ -44,6 +44,7 @@ $cms-light-color-1: #f2f2f2;  //main gray
 $cms-light-color-2 : #fefefe; //heder gray
 $cms-light-color-3 : #eaeef0; //heder gray tables
 $cms-light-color-4 : #d5dadc; //border buttons
+$cms-light-color-5 : #fafafa; //input background
 
 $cms-dark-color-1 : #37474f; //menu text dark
 $cms-dark-color-2 : #6b6e73; //menu text
@@ -53,3 +54,4 @@ $cms-color-1 : #5b9fef; //blue
 
 $cms-dark-color-1 : #273544;
 $cms-dark-color-2 : #192532;
+$cms-dark-color-3 : #2d2f31;
