--- a/Modules/Architect/Resources/assets/sass/architect/_variables.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_variables.scss
@@ -12,7 +12,7 @@ $panel-inner-border: $laravel-border-color;
 // Brands
 $brand-primary: #4a9fea;
 $brand-info:  #7460ee;
-$brand-success: #26c6da;
+$brand-success: #47daa4;
 $brand-warning: #ffb22b;
 $brand-danger: #fc4b6c;
 $brand-default: #fff;
@@ -45,6 +45,7 @@ $cms-light-color-2 : #fefefe; //heder gray
 $cms-light-color-3 : #eaeef0; //heder gray tables
 $cms-light-color-4 : #d5dadc; //border buttons
 $cms-light-color-5 : #fafafa; //input background
+$cms-light-color-6 : #dadada; //background sidebar
 
 $cms-dark-color-1 : #37474f; //menu text dark
 $cms-dark-color-2 : #6b6e73; //menu text
