--- a/Modules/Architect/Resources/assets/sass/architect/app.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/app.scss
@@ -24,5 +24,7 @@
 @import 'topnav';
 @import 'grid-page';
 @import 'rightbar-page';
+@import 'leftbar-page';
 @import 'modal';
 @import 'medias';
+@import 'content';
