--- a/Modules/Architect/Resources/assets/sass/architect/_leftbar-page.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_leftbar-page.scss
@@ -1,73 +1,21 @@
 
-.page-bar{
 
-  position:fixed;
-  top:70px;
-  z-index: 800;
-  width:100%;
-  background-color: $cms-light-color-1;
-
-  -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.15);
-  -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.15);
-  box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.15);
-  z-index:500;
-
-  .bnt-default{
-    background-color:$cms-light-color-1;
-
-  }
-
-  .actions-dropdown{
-    display: inline-block;
-    position: relative;
-
-    .btn {
-      padding-right: 20px;
-
-      .caret{
-        margin-left: 6px;
-      }
-    }
-  }
-
-
-  h1{
-    @include font(20,60,400);
-    display: inline-block;
-    margin:0;
-    padding-left: 20px;
-  }
-
-  .btn-default.btn-close {
-    background-color: transparent;
-    height: 63px;
-    margin: 0;
-    border: 1px solid #ccc;
-    border-bottom: none;
-    border-radius: 0px;
-
-    i.fa{
-      font-size:30px !important;
-      color: #b0b0b0;
-      font-weight: 700;
-    }
-
-  }
-
-  .dropdown-menu li a:hover, .dropdown-menu li a:focus, .dropdown-menu li a:active{
-    background-color:$cms-light-color-3;
-    color:$text-color;
-    box-shadow: none;
-  }
-
-}
-
-
-.rightbar-page{
+.leftbar-page {
 
   .page-content {
 
-    padding-top:90px;
+    padding-top: 20px;
+
+    h3{
+      display: inline-block;
+      vertical-align: top;
+      padding-right: 20px;
+      margin: 14px 0;
+    }
+    a {
+      display: inline-block;
+      vertical-align: top;
+    }
 
     .fields-list-container{
       /*background-color: #fafafa;*/
@@ -188,15 +136,71 @@
 
     z-index:100;
 
-    border-left:1px solid #ccc;
+    border-right:1px solid #ccc;
     position: fixed;
-    width:25%;
+    width: 16.7%;
     top:0px;
-    right:0px;
+    left:0px;
     padding:20px;
-    margin-top: 130px;
-    height: calc(100vh - 110px);
-    overflow: scroll;
+    margin-top: 70px;
+    height: calc(100vh - 70px);
+    overflow-y: scroll;
+    background-color: $cms-light-color-6;
+
+    padding:20px 0;
+
+    ul{
+
+      padding-left:0px;
+
+      li{
+        list-style-type: none;
+
+        a{
+          display: block;
+          border-left: 3px solid transparent;
+          padding-left: 35px;
+          color:$text-color;
+          @extend .animate;
+
+
+          i{
+            font-size: 20px;
+            padding-right: 10px;
+            line-height: 40px;
+            color: #a0a6a9;
+            @extend .animate;
+          }
+
+          .text{
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 40px;
+            display: inline-block;
+            vertical-align: top;
+            @extend .animate;
+          }
+        }
+
+        &:hover, &.active{
+
+          a{
+            border-left: 3px solid $brand-primary;
+            background-color:#c1c7ce;
+          }
+
+          i{
+            color:$brand-primary;
+          }
+
+          .text{
+            color:$cms-dark-color-1;
+          }
+
+        }
+      }
+    }
+
   }
 
   .form-group .form-control, .form-group .cke_textarea_inline{
@@ -227,35 +231,6 @@
     margin-bottom: 10px;
     border: 0;
     border-top: 1px solid #ccc;
-  }
-
-  h3{
-    @include font(14,24,400);
-    text-transform:uppercase;
-
-  }
-
-  .field-list{
-    .field {
-      border: 1px solid #ccc;
-      padding: 10px 16px;
-      margin-bottom: 5px;
-      @include font(14,24,500);
-      background-color: #fafafa;
-      padding-left:60px;
-      @include round(6px);
-      cursor: 'move';
-
-      i.fa{
-        position:absolute;
-        top: 12px;
-        left: 23px;
-        font-size: 22px;
-        padding-right: 10px;
-        color:#b4b4b4;
-      }
-
-    }
   }
 
 }
