--- a/Modules/Architect/Resources/assets/sass/architect/_content.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_content.scss
@@ -1,4 +1,32 @@
 .content{
+
+  .tag-manager {
+    .tags{
+      padding-top:10px;
+    }
+  }
+
+  .react-autosuggest__suggestions-container--open {
+      display: block;
+      position: absolute;
+      top: 38px;
+      width: 100%;
+      border: none;
+      background-color: $cms-light-color-5;
+      @include font(14,16,300);
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+      z-index: 2;
+      max-height: 40vh;
+      overflow-y: hidden;
+      @extend .box-shadow;
+  }
+
+  .react-autosuggest__suggestion--highlighted {
+      background-color: $cms-light-color-1;
+      color:$cms-color-1;
+  }
+
   .publish-form{
 
       .btn{
@@ -12,6 +40,10 @@
 
   .sidebar-item{
     padding:10px 0;
+  }
+
+  .sidebar {
+    padding-bottom:50px;
   }
 
   /*
