--- a/Modules/Architect/Resources/assets/sass/helpers/_common.scss
+++ b/Modules/Architect/Resources/assets/sass/helpers/_common.scss
@@ -92,3 +92,9 @@ div, header,footer,aside,section,article,h1,h2,h3,p,form,a,ul,li {
   background-repeat:no-repeat;
   background-size:cover;
 }
+
+.box-shadow{
+	-webkit-box-shadow: 2px 2px 6px 0px rgba(50, 50, 50, 0.3);
+	-moz-box-shadow:    2px 2px 6px 0px rgba(50, 50, 50, 0.3);
+	box-shadow:         2px 2px 6px 0px rgba(50, 50, 50, 0.3);
+}
