--- a/Modules/Architect/Resources/assets/sass/architect/_content.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_content.scss
@@ -147,6 +147,8 @@
     background-color: $cms-light-color-5;
   }
 
+  /** IMAGES AND IMAGES **/
+
   .image-field-container {
 
     text-align: center;
@@ -157,11 +159,155 @@
       border: 1px dashed #ccc;
       margin:0 auto;
       /*background-color:$cms-light-color-5;*/
+
+
+
+    }
+
+    .image{
+      height:100%;
+      width:100%;
+      background-size: contain;
+      background-color: transparent;
+      background-repeat: no-repeat;
+      background-position: center;
+      position: absolute;
+      top:0px;
+      left:0px;
+      z-index: 10;
     }
 
     .add-button{
       padding-top:60px;
+      z-index: 20;
     }
+
+    .field-help{
+        padding-top:10px;
+    }
+
+    &.images-gallery{
+
+      text-align: left;
+
+      .image-field{
+        display: inline-block;
+        margin: 10px 10px;
+        text-align: center;
+      }
+
+      a.btn.btn-link{
+        position: absolute;
+        top: -30px;
+        right: -22px;
+        z-index: 100;
+
+        i.fa{
+          font-size:25px;
+
+
+        }
+
+        &:hover{
+          i.fa{
+            color: $brand-danger;
+          }
+        }
+
+      }
+    }
+
   }
+
+  /** DATE  **/
+
+  .react-datepicker-popper{
+      z-index:1000;
+  }
+
+  .react-datepicker-wrapper{
+      display:block;
+      font-family: $font-family-sans-serif;
+
+      .react-datepicker__input-container{
+        display:block;
+      }
+
+
+  }
+
+  .react-datepicker__day-name, .react-datepicker__day, .react-datepicker__time-name{
+    @include font(12,30,300);
+    font-family: $font-family-sans-serif;
+    width: 30px;
+  }
+
+  .react-datepicker__current-month, .react-datepicker-time__header{
+    @include font(12,20,400);
+    font-family: $font-family-sans-serif;
+  }
+
+  .react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list{
+    padding:0px;
+    @include font(12,20,300);
+    font-family: $font-family-sans-serif;
+  }
+
+  .react-datepicker__time-container{
+    width:90px;
+  }
+
+  .react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box{
+    width:90px;
+  }
+
+  .react-datepicker__day--selected, .react-datepicker__day--in-selecting-range, .react-datepicker__day--in-range{
+    background-color:$cms-color-1;
+  }
+
+  .react-datepicker__day--selected:hover, .react-datepicker__day--in-selecting-range:hover, .react-datepicker__day--in-range:hover{
+    background-color:$cms-color-1;
+  }
+
+  .react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list li.react-datepicker__time-list-item--selected{
+    background-color:$cms-color-1;
+  }
+
+  .react-datepicker__navigation--next--with-time:not(.react-datepicker__navigation--next--with-today-button){
+    right: 100px;
+  }
+
+
+  /**** Contents *****/
+  .contents-field {
+    .fields-list-container{
+        border:none;
+        margin-bottom: 0px;
+        padding-bottom:0px !important;
+    }
+
+    .add-content-button {
+      border: 1px dashed #ccc;
+      padding: 0 20px;
+      margin-left: 20px;
+      text-align: center;
+      margin-right: 20px;
+    }
+
+    .field-type{
+      font-weight:300 !important;
+      color: #b4b4b4 !important;
+      text-align: left;
+    }
+
+    .field-inputs .field-name{
+      line-height: 45px;
+      text-align: left;
+      padding-left: 30px;
+    }
+
+  }
+
+
 
 }
