--- a/Modules/Architect/Resources/assets/sass/architect/_medias.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_medias.scss
@@ -12,6 +12,14 @@
     }
 }
 
+.dz-preview{
+  display: none;
+}
+
+.dz-file-preview.dz-processing{
+  display: none;
+}
+
 
 #media-edit.custom-modal{
 
