--- a/Modules/Architect/Resources/assets/sass/architect/_topnav.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_topnav.scss
@@ -71,6 +71,7 @@ header {
         z-index: 999;
         -webkit-box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
         box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
+        //overflow: hidden;
 
         ul, menu, dir {
             list-style-type: none !important;
@@ -178,10 +179,13 @@ header {
 }
 
 #logo-wrapper{
-  background-color:$cms-dark-color-2;
-  height:$header-height;
-
+  background-color:#fff;
+  height:$header-height+3;
   @include font(16,70,400);
+
+  img {
+    width:100%;
+  }
 }
 
 nav.main-nav{
