--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -15649,6 +15649,10 @@ nav.main-nav ul li a:hover {
   padding-left: 60px;
 }
 
+.content .table-contents {
+  width: 100%;
+}
+
 .medias .medias-dropfiles {
   border: 2px dotted #dcdcdc;
   padding: 30px 50px;
@@ -15858,8 +15862,24 @@ nav.main-nav ul li a:hover {
 }
 
 #media-select.custom-modal .image-col .image-container {
-  height: calc(100vh - 240px);
+  height: calc(100vh - 160px);
   overflow-y: scroll;
+}
+
+#media-select.custom-modal .image-col .image-container .pdf-preview {
+  border: 1px solid #ccc;
+  text-align: center;
+  width: 130px;
+  height: 130px;
+  padding: 15px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+#media-select.custom-modal .image-col .image-container .pdf-preview i.fa {
+  font-size: 50px;
+  line-height: 100px;
+  color: #b4b4b4;
 }
 
 #media-select.custom-modal .image-col ul {
@@ -15935,6 +15955,42 @@ nav.main-nav ul li a:hover {
   /*min-height: calc(100vh - 190px);*/
 }
 
+#media-select #table-medias_wrapper .pdf-preview {
+  border: 1px solid #ccc;
+  text-align: center;
+  width: 130px;
+  height: 130px;
+  padding: 15px;
+}
+
+#media-select #table-medias_wrapper .pdf-preview i.fa {
+  font-size: 40px;
+  line-height: 70px;
+  color: #b4b4b4;
+}
+
+#media-select #table-medias_wrapper .pdf-preview p {
+  position: absolute;
+  bottom: 2px;
+  left: 6%;
+  width: 88%;
+  font-size: 10px;
+  white-space: -moz-pre-wrap !important;
+  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;
+  /* Opera 4-6 */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
+  white-space: pre-wrap;
+  /* css-3 */
+  word-wrap: break-word;
+  /* Internet Explorer 5.5+ */
+  white-space: -webkit-pre-wrap;
+  /* Newer versions of Chrome/Safari*/
+  word-break: break-all;
+  white-space: normal;
+}
+
 #media-select #table-medias_wrapper .row {
   margin: 0;
 }
@@ -15981,7 +16037,6 @@ nav.main-nav ul li a:hover {
 
 #media-select #table-medias_wrapper tr {
   display: inline-block;
-  height: 130px;
   width: 20%;
 }
 
