--- a/Modules/Architect/Resources/assets/sass/architect/_rightbar-page.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_rightbar-page.scss
@@ -140,6 +140,10 @@
         padding-left:45px;
         border-right: 1px solid #ccc;
 
+        &.is-title{
+          background-color:#e0e0e0;
+        }
+
         i.fa{
           position:absolute;
           top: 12px;
