--- a/Modules/Architect/Resources/assets/sass/architect/_content.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_content.scss
@@ -76,6 +76,12 @@
       border-left:2px solid #ccc;
       margin-bottom: 20px;
 
+      .field-name{
+        line-height: 45px;
+        text-align: left;
+        padding-left: 30px;
+      }
+
 
       button.btn,div.btn{
 
