--- a/Modules/Architect/Resources/assets/sass/architect/_form.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_form.scss
@@ -27,3 +27,20 @@
   }
 
 }
+
+.field-form{
+  .block-div{
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+
+    i.fa{
+      position: absolute;
+      top:10px;
+      right: 10px;
+    }
+
+  }
+
+}
