--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -16206,6 +16206,19 @@ nav.main-nav ul li.active a {
   right: 10px;
 }
 
+.field-form .block-div {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+.field-form .block-div i.fa {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
 .map-container {
   margin-bottom: 20px;
 }
