--- a/Modules/Architect/Resources/assets/sass/architect/_page-builder.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_page-builder.scss
@@ -218,4 +218,43 @@
     }
   }
 
+
+  /*** preview *****/
+  .page-row{
+
+    &.item-filled {
+
+      a.text-preview {
+        p {
+          @include font(16,20,400);
+          padding-bottom:0px;
+          padding-top:15px;
+        }
+      }
+
+      a.richtext-preview {
+        padding:15px;
+        text-transform: none;
+        text-align: left;
+
+        p {
+          text-align: left;
+          @include font(12,16,300);
+          padding-bottom:0px;
+        }
+      }
+
+      a.image-preview {
+        display: block;
+        width: 100%;
+        height: 170px;
+
+        .background-image{
+          background-size: contain;
+          background-position: center;
+        }
+      }
+    }
+  }
+
 }
