--- a/Modules/Architect/Resources/assets/sass/architect/_page-builder.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_page-builder.scss
@@ -224,6 +224,47 @@
 
     &.item-filled {
 
+
+      .item-header{
+        background-color:$cms-light-color-6;
+        border: 1px solid #ccc;
+        height:30px;
+        z-index: 10;
+
+        a.btn-link {
+          display: inline;
+          margin: 0;
+          padding: 0 4px;
+        }
+
+        .left-buttons {
+          display: inline-block;
+          float:left;
+          padding-left: 10px;
+        }
+
+        .right-buttons{
+          display: inline-block;
+          float:right;
+          padding-right: 10px;
+        }
+
+        .btn-link{
+          padding: 5px 7px;
+          color:$text-color;
+
+          &.text-danger{
+            color:$text-color;
+
+            &:hover{
+              color:$brand-danger;
+            }
+          }
+
+        }
+      }
+
+
       a.text-preview {
         p {
           @include font(16,20,400);
