--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -16475,6 +16475,48 @@ nav.main-nav ul li.active a {
   color: #acacac;
 }
 
+.page-builder .page-row.item-filled .item-header {
+  background-color: #dadada;
+  border: 1px solid #ccc;
+  height: 30px;
+  z-index: 10;
+}
+
+.page-builder .page-row.item-filled .item-header a.btn-link {
+  display: inline;
+  margin: 0;
+  padding: 0 4px;
+}
+
+.page-builder .page-row.item-filled .item-header .left-buttons {
+  display: inline-block;
+  float: left;
+  padding-left: 10px;
+}
+
+.page-builder .page-row.item-filled .item-header .right-buttons {
+  display: inline-block;
+  float: right;
+  padding-right: 10px;
+}
+
+.page-builder .page-row.item-filled .item-header .btn-link {
+  padding: 5px 7px;
+  color: #455660;
+}
+
+.page-builder .page-row.item-filled .item-header .btn-link.text-danger,
+.page-builder .page-row.item-filled .item-header .content .tags .tag i.btn-link.fa:hover,
+.content .tags .tag .page-builder .page-row.item-filled .item-header i.btn-link.fa:hover {
+  color: #455660;
+}
+
+.page-builder .page-row.item-filled .item-header .btn-link.text-danger:hover,
+.page-builder .page-row.item-filled .item-header .content .tags .tag i.btn-link.fa:hover,
+.content .tags .tag .page-builder .page-row.item-filled .item-header i.btn-link.fa:hover {
+  color: #fc4b6c;
+}
+
 .page-builder .page-row.item-filled a.text-preview p {
   font-size: 16px;
   line-height: 20px;
